--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
     }
     </script>
 </head>
-<body>
+<body class="initial">
     <object data="images/logo.svg" type="image/svg+xml" title="Logo" name="logo" id="logo">
     </object>
     <!--
@@ -67,7 +67,7 @@
     
     <nav id="side">
         <div class="projects">
-            <input type="search" placeholder="Account or Project" name="account" size="28">
+            <input placeholder="Account or Project" name="account" size="20">
             <div style="height:20px;"></div>
             <ul>
                 <li><a>thepian/thepian-page</a></li>
@@ -92,12 +92,12 @@
 
         </div>
     </nav>
-    <header id="doc-title">
+    <header id="doc-title" class="initially-hidden">
         <input type="search" name="title" placeholder="Document Title">
     </header>
-    <section id="doc-info">
+    <section id="doc-info" class="initially-hidden">
     </section>
-    <section id="doc-text">
+    <section id="doc-text" class="initially-hidden">
         <textarea style="width:100%;height:100%;"></textarea>
     </section>
     
