--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 ---
 document: common
+stateful: yes
 ---
+<article id="stage" area-stage="signup edit">
+
 <object data="images/logo.svg" type="image/svg+xml" title="Logo" name="logo" id="logo">
 </object>
 
-<nav id="signin">
+<nav id="signin" in-area="signup">
     <h2>Connect to your account</h2>
     <input placeholder="User Name" name="username" type="email">
     <input placeholder="Password" name="password" type="password">
     <button type="button" name="login">Log In</button>
 </nav>
 
-<nav id="side">
+<nav id="side" in-area="edit">
     <div class="projects">
         <input placeholder="Search" name="account" size="20">
 
@@ -75,3 +78,5 @@ document: common
     </div>
     <textarea style="width:100%;height:100%;"></textarea>
 </section>
+
+</article>
