moved stage to file

--- a/index.html
+++ b/index.html
@@ -2,35 +2,5 @@
 document: common
 stateful: yes
 ---
-<article id="stage" area-stage="signup edit">
-
-    <object data="images/logo.svg" type="image/svg+xml" title="Logo" name="logo" id="logo"></object>
-
-    <nav id="signin" role="dialog" in-area="signup"></nav>
-
-    <nav id="account-head" in-area="settings edit">
-        <img src="images/icons/account-illu.svg" type="image/svg+xml" title="Your Account" name="account-illu">
-    </nav>
-
-    <nav id="side" in-area="edit">
-    </nav>
-
-    <header id="doc-title" class="initially-hidden">
-        <input type="search" name="title" placeholder="Document Title">
-    </header>
-
-    <section id="doc-info" class="initially-hidden">
-    </section>
-
-    <section id="doc-text" class="initially-hidden">
-        <div class="buttons">
-            <img src="images/icons/homepage.svg" type="image/svg+xml" role="button" title="Homepage" name="homepage" id="homepage-button">
-
-            <img src="images/icons/wiki.svg" type="image/svg+xml" role="button" title="Wiki" name="wiki" id="wiki-button">
-
-            <img src="images/icons/issues.svg" type="image/svg+xml" role="button" title="Issues" name="issues" id="issues-button">
-        </div>
-        <textarea style="width:100%;height:100%;"></textarea>
-    </section>
-
+<article id="stage" area-stage="signup settings edit">
 </article>
