DialogAction for submit buttons dialog support non-form Layouter/Laidout objects

--- a/_parts/signin.nav.html
+++ b/_parts/signin.nav.html
@@ -3,4 +3,4 @@
     <h2>Connect to your account</h2>
     <input placeholder="User Name" name="username" type="email">
     <input placeholder="Password" name="password" type="password">
-    <button type="button" name="login">Log In</button>
+    <button name="login" type="submit">Log In</button>
