--- a/_parts/common.document.html
+++ b/_parts/common.document.html
@@ -14,6 +14,7 @@ appcache: default
 	<meta name="author" content="{{ site.author }}">
 	
   <script src="/js/essentials.js" offline="yes"></script>
+  <script src="/js/application.js" offline="yes"></script>
   <script inline-src="config"></script>
 
   <link rel="stylesheet" href="/css/basic.css" id="basic-css" offline="yes">
