--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
-document: common
+document: application
 stateful: yes
+title: WriteUp
 ---
 <article id="stage" area-stage="signup settings edit">
 </article>
+
